Overflow text fixed finally

--- a/src/css/game.scss
+++ b/src/css/game.scss
@@ -114,7 +114,6 @@ button {
   border-image-slice: 34 fill;
   border-image-width: 40px;
   border-image-repeat: repeat;
-  max-width: 95%;
 }
 
 .dialog p#text_dialog {
